--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 torch==2.8.0
-peft
+peft==0.15.2
 hf_transfer
 evaluate
 sentence-transformers
 datasets
 wandb
-transformers
-vllm
+transformers==4.57.1
+vllm==0.11.0
 traker==0.3.2
+seaborn
